fixed overflow for edge browser

--- a/client/src/components/Messages/Messages.css
+++ b/client/src/components/Messages/Messages.css
@@ -5,6 +5,7 @@
     overflow: scroll;
     display: flex;
     height: 100%;
+    overflow: auto;
 }
 
 @media(max-width: 760px) {
