--- a/client/src/components/UsersInRoom/UsersInRoom.css
+++ b/client/src/components/UsersInRoom/UsersInRoom.css
@@ -18,6 +18,8 @@
 .users-list {
     height: calc(100% - 78px);
     overflow: scroll;
+    overflow-y: auto; 
+    overflow-x: hidden
 }
 
 .user-in-chat {
