--- a/client/src/pages/Chat/Chat.css
+++ b/client/src/pages/Chat/Chat.css
@@ -1,6 +1,7 @@
 .chat-shell{
     height: 100%;
     display: flex;
+    overflow: hidden;
 }
 
 .chat-users-container{
